--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,11 @@
   },
   "homepage": "https://github.com/radiantnode/alexa-dtv-tuner#readme",
   "dependencies": {
+    "alexa-app": "^2.3.2",
+    "body-parser": "^1.14.2",
+    "express": "^4.13.4",
     "moment": "^2.11.1",
+    "morgan": "^1.6.1",
     "mysql": "^2.10.2",
     "request-promise": "^2.0.0"
   }
