--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "moment": "^2.11.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "^1.6.1",
     "mysql": "^2.10.2",
     "request-promise": "^2.0.0"
